refactor and downgrade to java 1.8